[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
# weggli = { git = "https://github.com/weggli-rs/weggli.git" }
weggli = "0.2.4"
crossbeam = "0.8"
tree-sitter = "0.20.10"
walkdir = "2.3.3"
# log = "0.4.17"
# rayon = "1.7.0"
colored = "2.0.0"
# nix = "0.26.2"
